[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-config"
version = "0.1.0"
description = "Shared configuration model for the robotsix stack — one YAML+env config that flows unchanged through pip, dev docker, and central-deploy."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Damien SIX", email = "damien.robotsix@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "types-PyYAML",
]
docs = [
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-standards"
Documentation = "https://robotsix.net/standards/"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_config"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
