[project]
name = "robotsix-standards"
version = "0.1.0"
description = "Cross-cutting config and deployment standards for the robotsix stack."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Damien SIX", email = "damien.robotsix@gmail.com" }]

[dependency-groups]
docs = ["mkdocs-material"]

# This repo is documentation only. The shared configuration library that
# implements the config standard lives in `robotsix-yaml-config` (its
# `[pydantic]` extra), not here.
