[project]
name = "robotsix-standards"
version = "0.1.4"
description = "Cross-cutting config and deployment standards for the robotsix stack."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Damien SIX", email = "damien.robotsix@gmail.com" }]

[dependency-groups]
docs = ["mkdocs-htmlproofer-plugin", "mkdocs-material"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
name = "robotsix-standards"
start_string = "<!-- towncrier release notes start -->\n"
# .gitkeep keeps changelog.d/ present after a release consumes every
# fragment (git drops empty dirs; baseline-check requires the dir).
ignore = [".gitkeep"]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Changed"
showcontent = true

# This repo is documentation only. The shared configuration library that
# implements the config standard lives in `robotsix-config`, not here.

[tool.codespell]
skip = "*.lock,*.json,*.svg,*.png,.git,*.secrets.baseline,site"
ignore-words-list = "bu,ro,te,ser,fo,tha,thru,coo,ans,ist,nd"
